<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <TextView
            android:textSize="@dimen/about_screen_font_size"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#fff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"/>
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#fff">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                >
            <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ferra_ru_black"/>
            <TextView
                    android:textSize="@dimen/about_screen_font_size"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/about_version"
                    android:paddingTop="7.0dip"
                    android:paddingBottom="7.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"/>
            <TextView
                    android:textSize="@dimen/about_screen_font_size"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:padding="9.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"/>
        </LinearLayout>
        <TextView
                android:textSize="@dimen/about_screen_font_size"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14.0dip"
                android:text="@string/author"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                />
    </RelativeLayout>

</LinearLayout>